[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/InventoryGUI/ItemSlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/map/player_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/shadermaterials/JitterFreeMaterial.tres" type="Material" id=3]
[ext_resource path="res://assets/ui/inventory/stats_background.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/inventory/background.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/inventory/element_background.png" type="Texture" id=6]
[ext_resource path="res://Scenes/InventoryGUI/ComponentCounter.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/ui/map/robo_icon.png" type="Texture" id=8]
[ext_resource path="res://src/Inventory/InventoryGUI.gd" type="Script" id=9]
[ext_resource path="res://assets/shadermaterials/SPVariableRGBA.tres" type="Material" id=10]
[ext_resource path="res://src/Inventory/SelectedItem.gd" type="Script" id=11]
[ext_resource path="res://assets/fonts/gamegirl_font.tres" type="DynamicFont" id=12]

[node name="InventoryGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.0470588, 0.0313726, 0.0901961, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0
margin_top = 100.0
margin_right = -50.0
margin_bottom = -101.0
mouse_filter = 2
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="MarginContainer" parent="Content"]
margin_right = 160.0
margin_bottom = 399.0
custom_constants/margin_top = 40

[node name="Bg" type="NinePatchRect" parent="Content/Player"]
show_behind_parent = true
material = ExtResource( 10 )
use_parent_material = true
margin_top = 40.0
margin_right = 160.0
margin_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 160, 210 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Label" parent="Content/Player/Bg"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.635294, 1, 0.6, 1 )
custom_constants/line_spacing = 0
text = "HP   3/3
Arm    0
--------
Vis    5
Rad    5
--------
Atk  N/a
Pen  N/a"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainScreen" type="TextureRect" parent="Content"]
material = ExtResource( 3 )
margin_left = 176.0
margin_right = 749.0
margin_bottom = 399.0
rect_min_size = Vector2( 573, 399 )
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="HBoxContainer" parent="Content/MainScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_top = 33.0
margin_right = -373.0
margin_bottom = -253.0
rect_scale = Vector2( 3, 3 )
mouse_filter = 2
custom_constants/separation = 9
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="VBoxContainer" parent="Content/MainScreen/Content"]
margin_right = 20.0
margin_bottom = 113.0
mouse_filter = 2
custom_constants/separation = 16

[node name="Icon" type="TextureRect" parent="Content/MainScreen/Content/Player"]
material = ExtResource( 3 )
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="Icon" type="TextureRect" parent="Content/MainScreen/Content/Player/Icon"]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
hint_tooltip = "Player"
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="VBoxContainer" parent="Content/MainScreen/Content/Player"]
margin_top = 36.0
margin_right = 20.0
margin_bottom = 113.0
mouse_filter = 2
custom_constants/separation = -1

[node name="Slot1" parent="Content/MainScreen/Content/Player/Items" instance=ExtResource( 1 )]

[node name="Slot2" parent="Content/MainScreen/Content/Player/Items" instance=ExtResource( 1 )]
margin_top = 19.0
margin_bottom = 39.0

[node name="Slot3" parent="Content/MainScreen/Content/Player/Items" instance=ExtResource( 1 )]
margin_top = 38.0
margin_bottom = 58.0

[node name="Slot4" parent="Content/MainScreen/Content/Player/Items" instance=ExtResource( 1 )]
margin_top = 57.0
margin_bottom = 77.0

[node name="Store" type="VBoxContainer" parent="Content/MainScreen/Content"]
margin_left = 29.0
margin_right = 144.0
margin_bottom = 113.0
mouse_filter = 2
custom_constants/separation = 6

[node name="Components" type="HBoxContainer" parent="Content/MainScreen/Content/Store"]
margin_right = 115.0
margin_bottom = 30.0
mouse_filter = 2
custom_constants/separation = -1

[node name="Not" parent="Content/MainScreen/Content/Store/Components" instance=ExtResource( 7 )]
type = 0

[node name="And" parent="Content/MainScreen/Content/Store/Components" instance=ExtResource( 7 )]
margin_left = 19.0
margin_right = 39.0
type = 1

[node name="Or" parent="Content/MainScreen/Content/Store/Components" instance=ExtResource( 7 )]
margin_left = 38.0
margin_right = 58.0
type = 2

[node name="Xor" parent="Content/MainScreen/Content/Store/Components" instance=ExtResource( 7 )]
margin_left = 57.0
margin_right = 77.0
type = 3

[node name="Over" parent="Content/MainScreen/Content/Store/Components" instance=ExtResource( 7 )]
margin_left = 76.0
margin_right = 96.0
type = 5

[node name="Under" parent="Content/MainScreen/Content/Store/Components" instance=ExtResource( 7 )]
margin_left = 95.0
margin_right = 115.0
type = 4

[node name="Items" type="GridContainer" parent="Content/MainScreen/Content/Store"]
margin_top = 36.0
margin_right = 115.0
margin_bottom = 113.0
mouse_filter = 2
custom_constants/vseparation = -1
custom_constants/hseparation = -1
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]

[node name="Slot2" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 19.0
margin_right = 39.0

[node name="Slot3" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 38.0
margin_right = 58.0

[node name="Slot4" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 57.0
margin_right = 77.0

[node name="Slot5" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 76.0
margin_right = 96.0

[node name="Slot6" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 95.0
margin_right = 115.0

[node name="Slot7" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_top = 19.0
margin_bottom = 39.0

[node name="Slot8" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 19.0
margin_top = 19.0
margin_right = 39.0
margin_bottom = 39.0

[node name="Slot9" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 38.0
margin_top = 19.0
margin_right = 58.0
margin_bottom = 39.0

[node name="Slot10" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 57.0
margin_top = 19.0
margin_right = 77.0
margin_bottom = 39.0

[node name="Slot11" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 76.0
margin_top = 19.0
margin_right = 96.0
margin_bottom = 39.0

[node name="Slot13" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 95.0
margin_top = 19.0
margin_right = 115.0
margin_bottom = 39.0

[node name="Slot12" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_top = 38.0
margin_bottom = 58.0

[node name="Slot14" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 19.0
margin_top = 38.0
margin_right = 39.0
margin_bottom = 58.0

[node name="Slot15" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 38.0
margin_top = 38.0
margin_right = 58.0
margin_bottom = 58.0

[node name="Slot16" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 57.0
margin_top = 38.0
margin_right = 77.0
margin_bottom = 58.0

[node name="Slot17" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 76.0
margin_top = 38.0
margin_right = 96.0
margin_bottom = 58.0

[node name="Slot18" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 95.0
margin_top = 38.0
margin_right = 115.0
margin_bottom = 58.0

[node name="Slot19" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_top = 57.0
margin_bottom = 77.0

[node name="Slot20" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 19.0
margin_top = 57.0
margin_right = 39.0
margin_bottom = 77.0

[node name="Slot22" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 38.0
margin_top = 57.0
margin_right = 58.0
margin_bottom = 77.0

[node name="Slot21" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 57.0
margin_top = 57.0
margin_right = 77.0
margin_bottom = 77.0

[node name="Slot23" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 76.0
margin_top = 57.0
margin_right = 96.0
margin_bottom = 77.0

[node name="Slot24" parent="Content/MainScreen/Content/Store/Items" instance=ExtResource( 1 )]
margin_left = 95.0
margin_top = 57.0
margin_right = 115.0
margin_bottom = 77.0

[node name="Robo" type="VBoxContainer" parent="Content/MainScreen/Content"]
margin_left = 153.0
margin_right = 173.0
margin_bottom = 113.0
mouse_filter = 2
custom_constants/separation = 16

[node name="Icon" type="TextureRect" parent="Content/MainScreen/Content/Robo"]
material = ExtResource( 3 )
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="Icon" type="TextureRect" parent="Content/MainScreen/Content/Robo/Icon"]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
hint_tooltip = "Robo"
texture = ExtResource( 8 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="VBoxContainer" parent="Content/MainScreen/Content/Robo"]
margin_top = 36.0
margin_right = 20.0
margin_bottom = 113.0
custom_constants/separation = -1

[node name="Slot1" parent="Content/MainScreen/Content/Robo/Items" instance=ExtResource( 1 )]

[node name="Slot2" parent="Content/MainScreen/Content/Robo/Items" instance=ExtResource( 1 )]
margin_top = 19.0
margin_bottom = 39.0

[node name="Slot3" parent="Content/MainScreen/Content/Robo/Items" instance=ExtResource( 1 )]
margin_top = 38.0
margin_bottom = 58.0

[node name="Slot4" parent="Content/MainScreen/Content/Robo/Items" instance=ExtResource( 1 )]
margin_top = 57.0
margin_bottom = 77.0

[node name="Robo" type="MarginContainer" parent="Content"]
margin_left = 765.0
margin_right = 925.0
margin_bottom = 399.0
custom_constants/margin_top = 40

[node name="Bg" type="NinePatchRect" parent="Content/Robo"]
show_behind_parent = true
material = ExtResource( 10 )
use_parent_material = true
margin_top = 40.0
margin_right = 160.0
margin_bottom = 250.0
rect_min_size = Vector2( 160, 210 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Label" parent="Content/Robo/Bg"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.635294, 1, 0.6, 1 )
custom_constants/line_spacing = 0
text = "HP   3/3
Arm    0
--------
Vis    5
Rad    5
--------
Atk  N/a
Pen  N/a"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedItem" type="TextureRect" parent="."]
visible = false
material = ExtResource( 3 )
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 3, 3 )
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
